# datalogproject

./: CMakeLists.txt  Database.h  DatalogProgram.h  Graph.h  Interpreter.h  Node.h  Parameter.h  Parser.h  Predicate.h  README.md  Relation.h  Rule.h  Scanner.h  Scheme.h  Token.h  Tuple.h  input.txt  main.cpp
